[gd_scene load_steps=44 format=2]

[ext_resource path="res://scripts/NetworkIdentifier.gd" type="Script" id=1]
[ext_resource path="res://cat/cat_anime.png" type="Texture" id=2]
[ext_resource path="res://cat/ProgressBar.gd" type="Script" id=3]
[ext_resource path="res://shadow.png" type="Texture" id=4]
[ext_resource path="res://default_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://cat/Cat.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0365

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0.2, 0.2, 1 )

[sub_resource type="DynamicFont" id=4]
size = 4

[sub_resource type="CircleShape2D" id=5]
radius = 15.8356

[sub_resource type="Animation" id=6]
resource_name = "catch"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("RotatePos/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_on_catch"
}, {
"args": [  ],
"method": "_on_catch_done"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("RotatePos/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_dead_done"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("RotatePos/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_hurt_done"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("RotatePos/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "throw"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("RotatePos/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_on_throw_ball"
}, {
"args": [  ],
"method": "_on_throw_done"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "walk_left"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RotatePos/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotatePos:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "walk_right"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RotatePos/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RotatePos:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "catch"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "throw"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walk_right"

[sub_resource type="AnimationNodeBlendSpace1D" id=20]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = -0.1
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id=21]
advance_condition = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
advance_condition = "not_walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachine" id=36]
states/catch/node = SubResource( 13 )
states/catch/position = Vector2( 344, 313 )
states/dead/node = SubResource( 14 )
states/dead/position = Vector2( 652, -98 )
states/hurt/node = SubResource( 15 )
states/hurt/position = Vector2( 684, 323 )
states/idle/node = SubResource( 16 )
states/idle/position = Vector2( 329, 101 )
states/throw/node = SubResource( 17 )
states/throw/position = Vector2( 349, -83 )
states/walk/node = SubResource( 20 )
states/walk/position = Vector2( 702, 106 )
transitions = [ "idle", "walk", SubResource( 21 ), "walk", "idle", SubResource( 22 ), "walk", "dead", SubResource( 23 ), "idle", "dead", SubResource( 24 ), "idle", "throw", SubResource( 25 ), "walk", "throw", SubResource( 26 ), "throw", "dead", SubResource( 27 ), "idle", "catch", SubResource( 28 ), "walk", "catch", SubResource( 29 ), "walk", "hurt", SubResource( 30 ), "idle", "hurt", SubResource( 31 ), "throw", "idle", SubResource( 32 ), "catch", "idle", SubResource( 33 ), "hurt", "idle", SubResource( 34 ), "dead", "idle", SubResource( 35 ) ]
start_node = "idle"
graph_offset = Vector2( 109, -42.2171 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=37]

[node name="Cat" type="KinematicBody2D" groups=[
"cat",
]]
collision_mask = 9
script = ExtResource( 6 )

[node name="NetworkIdentifier" type="Node" parent="."]
script = ExtResource( 1 )

[node name="RotatePos" type="Position2D" parent="."]

[node name="Body" type="Sprite" parent="RotatePos"]
position = Vector2( 0, -55.9559 )
texture = ExtResource( 2 )
hframes = 23

[node name="ThrowPosition2D" type="Position2D" parent="RotatePos"]
position = Vector2( 25.2269, -59.2832 )

[node name="CollectArea2D" type="Area2D" parent="RotatePos"]
position = Vector2( 13.6646, -10.0908 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RotatePos/CollectArea2D"]
shape = SubResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -24.5407 )
z_index = -1
texture = ExtResource( 4 )

[node name="UI" type="Node2D" parent="."]
position = Vector2( 0, -65.4074 )

[node name="NameLabel" type="Label" parent="UI"]
margin_left = -20.0452
margin_top = -34.2431
margin_right = 19.9548
margin_bottom = 1.75694
custom_fonts/font = ExtResource( 5 )
text = "llll"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="UI"]
margin_left = -47.0
margin_top = 3.0
margin_right = 46.0
margin_bottom = 10.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
value = 12.0
percent_visible = false
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16.064 )
shape = SubResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/catch = SubResource( 6 )
anims/dead = SubResource( 7 )
anims/hurt = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/throw = SubResource( 10 )
anims/walk_left = SubResource( 11 )
anims/walk_right = SubResource( 12 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 36 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 37 )
parameters/conditions/not_walk = false
parameters/conditions/walk = false
parameters/walk/blend_position = 1.0
